fix minor padding issue on mobile

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -37,6 +37,7 @@ nav {
     display: flex;
     margin: auto;
     width: 800px;
+    padding: 0px 30px;
 }
 
 input {
